# financialMarketSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  currency.cpp  currency.h  events.cpp  events.h  httpRequestGroq.cpp  httpRequestGroq.h  importante.txt  investors.cpp  investors.h  main  main.cpp  main.vcxproj  main.vcxproj.filters  market.cpp  market.h  stock.cpp  stock.h
cppFiles/: cripto.cpp  criptos.cpp  events.cpp  market.cpp  stock.cpp  stocks.cpp  util.cpp
finance/: pom.xml
finance/src/main/java/controller/: AuthController.java  SimulatorController.java
finance/src/main/java/dto/: LoginRequestDto.java  RegisterRequestDto.java  ResponseDto.java
finance/src/main/java/entity/: User.java
finance/src/main/java/repository/: UserRepository.java
finance/src/main/java/security/: CustomUserDetailsService.java  SecurityConfig.java  (+2 more)
front/financeFront/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
front/financeFront/src/: index.html  styles.css
front/financeFront/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
groqIa/: api.cpp  api.h  groq.cpp  groq.h  info.txt
headerFiles/: cripto.h  events.h  market.h  stock.h  util.h
java/finance/: pom.xml
x64/Debug/: main.exe.recipe  main.ilk  main.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main.lastbuildstate  main.write.1u.tlog
(+97 files in other folders)
